# models

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  INFERENCE_BENCHMARKS.md  RAG_BENCHMARKS.md  README.md  RELEASING.md  SECURITY.md  build.gradle.kts  jreleaser.yml  settings.gradle.kts  spotbugs-exclude.xml
.github/workflows/: apple-bridge.yml  ci.yml  codeql.yml  model-determinism.yml  (+4 more)
benchmark-config/: launch-qualification-models.json
models-api/: build.gradle.kts
models-backend-apple/: README.md  build.gradle.kts  gradle.lockfile
models-backend-native/: README.md  build.gradle.kts  gradle.lockfile
models-backend-onnx/: build.gradle.kts
models-backend-purejava/: build.gradle.kts
models-bench/: README.md  build.gradle.kts
models-embedding/: build.gradle.kts  gradle.lockfile
models-langchain4j/: build.gradle.kts  gradle.lockfile
models-quarkus/: build.gradle.kts
models-rag/: README.md  build.gradle.kts
models-rag-bench/: README.md  build.gradle.kts
models-rag-bench/python/: pyproject.toml
models-rag-bench/python/src/: models_rag_baseline.py
models-rag-bench/python/tests/: test_models_rag_baseline.py
models-runtime/: build.gradle.kts
models-semantic-kernel/: build.gradle.kts
models-semantic-order/: README.md  build.gradle.kts
models-spring-ai/: build.gradle.kts  gradle.lockfile
models-spring-boot-starter/: build.gradle.kts  gradle.lockfile
models-test/: build.gradle.kts
scripts/: bootstrap-inference-bench-host.sh  qualify-launch-models.sh  run-controlled-inference-benchmarks.sh  run-purejava-determinism-matrix.sh
(+346 files in other folders)
