[project]
name = "models-rag-python-baseline"
version = "0.1.0"
description = "Controlled Python RAG baseline for Models, Ollama, and llama.cpp comparisons"
requires-python = ">=3.12"
dependencies = [
    "bm25s==0.3.9",
    "httpx==0.28.1",
    "ollama==0.6.2",
]

[project.optional-dependencies]
llama = ["llama-cpp-python==0.3.34"]
test = ["pytest==8.4.2"]

[project.scripts]
models-rag-python = "models_rag_baseline:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/models_rag_baseline.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
